--- a/VidhayakApp.Web/Views/AppUser/Edit.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Edit.cshtml
@@ -22,7 +22,7 @@
                     <div class="card-body">
 
 
-                        <form class="row g-3" method="post" asp-action="/AppUser/CreateUser" >
+                        <form class="row g-3" method="post" asp-action="UpdateUser" asp-controller="AppUser">
                 <div class="col-md-6">
                     <label asp-for="Name" class="form-label">Name</label>
                     <input asp-for="Name" class="form-control" id="Name">
