--- a/VidhayakApp.Web/Views/Shared/_UserLayout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_UserLayout.cshtml
@@ -1,4 +1,5 @@
-﻿ @using VidhayakApp.Web.Controllers
+﻿ @using Microsoft.AspNetCore.Http;
+ @using VidhayakApp.Web.Controllers
 @model AccountController
 
 
@@ -213,7 +214,7 @@
                         <img src="~/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
                     </div>
                     <div class="info">
-                        <a href="#" class="d-block">Alexander Pierce</a>
+                        <a href="#" class="d-block">Name!!!!!!!!!!!!!!!!</a>
                     </div>
                 </div>
 
@@ -277,7 +278,7 @@
                                 </p>
                             </a>
                         </li>
-                        <li class="nav-item">
+                        @* <li class="nav-item">
                             <a asp-action="Feedback" asp-controller="User" class="nav-link">
                                 <img data-v-d7e8173f="" class="app-preview__image-origin" srcset="https://img.icons8.com/?size=256&amp;id=13823&amp;format=png 1x, https://img.icons8.com/?size=512&amp;id=13823&amp;format=png 2x" width="30px" height="30px" alt="Popular icon" style="">
                                 <p>
@@ -285,7 +286,7 @@
                                     <span class="badge badge-info right"></span>
                                 </p>
                             </a>
-                        </li>
+                        </li> *@
                     </ul>
                 </nav>
             </div>
@@ -392,5 +393,6 @@
             <script src="~/dist/js/demo.js"></script>
             <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
             <script src="~/dist/js/pages/dashboard.js"></script>
+            <script src="~/js/department.js"></script>
 </body>
 </html>
