--- a/VidhayakApp.Web/Views/User/Complaint.cshtml
+++ b/VidhayakApp.Web/Views/User/Complaint.cshtml
@@ -1,6 +1,15 @@
-﻿@{
+﻿@using VidhayakApp.Core.Entities
+@using VidhayakApp.ViewModels
+@model ComplaintViewModel
+
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+
+@{
     ViewData["Title"] = "Complaint";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
+    // Access HttpContext
+    var context = HttpContextAccessor.HttpContext;
+    // Use httpContext as needed
 }
 
 <body>
@@ -17,51 +26,56 @@
                             <form method="post">
                                 <div class="form-group">
                                     <label>Category</label>
-                                    <select id="categoryInput" class="form-control">
+                                    <select asp-for="Category" asp-items="Html.GetEnumSelectList<ItemType>()" id="categoryInput" class="form-control">
+                                        <option selected="" value="">Select...</option>
+                                    </select>
+                                    @* <select id="categoryInput" class="form-control">
                                         <!-- Options here -->
                                         <option selected="" value="Complaint">Complaint</option>
-                                    </select>
+                                    </select> *@
                                 </div>
 
+                                <input type="hidden" asp-for="UserId" value="@context.Session.GetInt32("UserId")" />
+                                            
                                 <div class="form-group">
                                     <label>SubCategory</label>
-                                    <select id="subCategoryInput" class="form-control" onchange="handleSubCategoryChange()">
+                                    <select id="subCategoryInput" class="form-control" asp-for="SubCategoryId"  onchange="handleSubCategoryChange()">
                                         <!-- Options here -->
                                         <option selected="">Select...</option>
-                                        <option value="Related to Government Department">Related to Government Department</option>
-                                        <option value="Related to Private Organization">Related to Private Organization</option>
-                                        <option value="Related to Personal">Related to Personal</option>
+                                        <option value="2">Related to Government Department</option>
+                                        <option value="3">Related to Private Organization</option>
+                                        <option value="4">Related to Personal</option>
                                     </select>
                                 </div>
 
                                 <div class="col-sm-8">
                                     <div class="form-group">
                                         <label>Title</label>
-                                        <input type="text" id="titleId" class="form-control" placeholder="Enter ..." disbaled/>
+                                        <input asp-for="Title" type="text"  id="titleId" class="form-control" placeholder="Enter ..." disabled/>
                                     </div>
 
                                     <div class="form-group">
                                         <label>Description</label>
-                                        <textarea id="descriptionId" class="form-control"  rows="3" placeholder="Enter ..." disabled ></textarea>
+                                        <textarea asp-for ="Description" id="descriptionId" class="form-control" rows="3" placeholder="Enter ..." disabled></textarea>
                                     </div>
 
                                     <div class="form-group">
                                         <label>Select Department</label>
-                                        <select id="departmentInput" class="form-control" disabled>
+                                        <select asp-for="DepartmentId" id="departmentInput" class="form-control" disabled>
                                             <!-- Options here -->
                                             <option selected="">Select...</option>
-                                            <option value="Collectorate">Collectorate</option>
-                                            <option value="Nagar Tanagam">Nagar Tanagam</option>
-                                            <option value="Rajthav Division">Rajthav Division</option>
-                                            <option value="Panchayi Division">Panchayi Division</option>
-                                            <option value="Adhyay Division">Adhyay Division</option>
-                                            <option value="Mahila and Bal Vikas Division">Mahila and Bal Vikas Division</option>
-                                            <option value="Samasjik Nyay Division">Samasjik Nyay Division</option>
-                                            <option value="Thavathy Division">Thavathy Division</option>
-                                            <option value="Lok Tanmayi Division PWD">Lok Tanmayi Division PWD</option>
-                                            <option value="Lok Thavathy and Yantriki PHE">Lok Thavathy and Yantriki PHE</option>
-                                            <option value="Shiksha Division">Shiksha Division</option>
-                                            <option value="Bak">Bak</option>
+                                            <option value="1">Collectorate</option>
+                                            <option value="2">Nagar Tanagam</option>
+                                            <option value="3">Rajthav Division</option>
+                                            <option value="4">Panchayi Division</option>
+                                            <option value="5">Adhyay Division</option>
+                                            <option value="6">Mahila and Bal Vikas Division</option>
+                                            <option value="7">Samasjik Nyay Division</option>
+                                            <option value="8">Thavathy Division</option>
+                                            <option value="9">Lok Tanmayi Division PWD</option>
+                                            <option value="10">Lok Thavathy and Yantriki PHE</option>
+                                            <option value="11">Shiksha Division</option>
+                                            <option value="12">Bak</option>
                                             <!-- Add other options as needed -->
 
                                         </select>
@@ -69,7 +83,7 @@
                                 </div>
 
                                 <div class="text-center">
-                                    <button id="submitId" class="btn btn-primary col-sm-12" type="submit">Submit</button>
+                                    <button asp-action="Create" asp-controller="Complaint" id="submitId" class="btn btn-primary col-sm-12" type="submit">Submit</button>
                                 </div>
                             </form>
                         </div>
