13-03-2024 14:16pm Totally new Changes

--- a/VidhayakApp.Web/Views/Shared/_Layout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
-﻿@using VidhayakApp.Web.Controllers
-@model AccountController
+﻿@* @using VidhayakApp.Web.Controllers
+@model AccountController *@
 
 
 
