--- a/VidhayakApp.Web/Views/Shared/_UserLayout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_UserLayout.cshtml
@@ -1,6 +1,6 @@
 ﻿ @using Microsoft.AspNetCore.Http;
- @using VidhayakApp.Web.Controllers
-@model AccountController
+ @* @using VidhayakApp.Web.Controllers
+@model AccountController *@
 
 
 <!DOCTYPE html>
