--- a/VidhayakApp.Web/Views/Account/Register.cshtml
+++ b/VidhayakApp.Web/Views/Account/Register.cshtml
@@ -114,21 +114,7 @@
                     </div>
                 </form>
 
-               @*  <div class="social-auth-links text-center">
-                    <p>- OR -</p>
-                    <a href="#" class="btn btn-block btn-primary">
-                        <i class="fab fa-facebook mr-2"></i>
-                        Sign up using Facebook
-                    </a>
-                    <a href="#" class="btn btn-block btn-danger">
-                        <i class="fab fa-google-plus mr-2"></i>
-                        Sign up using Google+
-                    </a>
-                </div> *@
-
-              @*   <a href="login.html" class="text-center">I already have a membership</a>
-            </div> *@
-            <!-- /.form-box -->
+              
         </div><!-- /.card -->
     </div>
     <!-- /.register-box -->
@@ -147,7 +133,7 @@
 </html>
 
 
-<div class="card">
+@* <div class="card">
     <div class="card-body">
 
         <form method="post">
@@ -192,4 +178,4 @@
             <button asp-action="Register" asp-controller="Account" type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
-</div>
+</div> *@
