--- a/VidhayakApp.Web/Views/Complaint/Create.cshtml
+++ b/VidhayakApp.Web/Views/Complaint/Create.cshtml
@@ -4,6 +4,7 @@
 @{
     ViewData["Title"] = "Create Complaint";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
+    TempData["Message"] =  "Complaint Created Successfully";
 }
 
 <form method="post">
@@ -11,8 +12,8 @@
 
         <a asp-controller="Complaint" asp-action="Create" aria-pressed="true"></a>
         <div class="alert alert-success" role="alert">
-            Complaint Created Successfully
+            @TempData["Message"]
         </div>
-        <button asp-controller="User" asp-action="Dashboard" class="btn btn-dark btn-lg active text-center" role="button" aria-pressed="true">Back To List</button>
+        <button asp-controller="Complaint" asp-action="Create" class="btn btn-dark btn-lg active text-center" role="button" aria-pressed="true">Back To List</button>
     </div>
 </form>       
